# swagger.json
@@ -132,7 +132,117 @@
 				}
 			}
 		},
+		"/auth/login": {
+			"post": {
+				"description": "User login",
+				"tags": [
+					"Auth"
+				],
+				"requestBody": {
+					"content": {
+						"application/json": {
+							"schema": {
+								"type": "object",
+								"properties": {
+									"username": {
+										"type": "string",
+										"description": "The username of the user",
+										"example": "user123"
+									},
+									"password": {
+										"type": "string",
+										"description": "The password of the user",
+										"example": "password123"
+									}
+								},
+								"required": [
+									"username",
+									"password"
+								]
+							}
+						}
+					}
+				},
+				"responses": {
+					"200": {
+						"description": "Login successful",
+						"content": {
+							"application/json": {
+								"schema": {
+									"type": "object",
+									"properties": {
+										"token": {
+											"type": "string",
+											"description": "JWT token for authentication",
+											"example": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9..."
+										}
+									}
+								}
+							}
+						}
+					},
+					"401": {
+						"description": "Invalid username or password"
+					},
+					"500": {
+						"description": "Internal server error"
+					}
+				}
+			}
+		},
 		"/short-urls": {
+			"get": {
+				"description": "Get all short URLs by User",
+				"tags": [
+					"Short URL"
+				],
+				"security": [
+					{
+						"bearerAuth": []
+					}
+				],
+				"responses": {
+					"200": {
+						"description": "List of short URLs",
+						"content": {
+							"application/json": {
+								"schema": {
+									"type": "array",
+									"items": {
+										"type": "object",
+										"properties": {
+											"id": {
+												"type": "string",
+												"description": "The ID of the short URL",
+												"example": "abc123"
+											},
+											"url": {
+												"type": "string",
+												"description": "The original URL",
+												"example": "https://www.example.com"
+											},
+											"user_id": {
+												"type": "string",
+												"description": "The ID of the user who created the short URL",
+												"example": "user123"
+											},
+											"created_at": {
+												"type": "string",
+												"description": "The date and time the short URL was created",
+												"format": "date-time",
+												"example": "2023-10-01T12:00:00Z"
+											}
+										}
+									}
+								}
+							}
+						}
+					},
+					"500": {
+						"description": "Internal server error"
+					}
+				}
+			},
 			"post": {
 				"description": "Create a short URL",
 				"tags": [
